--- a/src/App.css
+++ b/src/App.css
@@ -171,7 +171,7 @@ footer a:hover {
 .leaveBtn {
     width: 100%;
     margin-top: 20px;
-    font-weight: bol;
+    font-weight: bold;
 }
 
 .copyBtn {
