--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400&display=swap");
+
 body {
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: #1c1e29;
+    color: rgba(0, 0, 0, 0.87);
+    font-family: "Roboto", Helvetica, Arial, sans-serif;
+    font-size: 0.81rem;
+    font-weight: 400;
+    line-height: 1.25rem;
+    margin: 0;
+    min-width: 18.75rem;
+}
+
+* {
+  padding: 0;
+  margin: 0;
 }
