--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,11 @@ body {
     max-width: 90%;
 }
 
+.homePageLogo {
+    height: 80px;
+    margin-bottom: 30px;
+}
+
 footer {
     position: fixed;
     bottom: 0;
